[gd_scene load_steps=3 format=3 uid="uid://d232jx03prsxa"]

[ext_resource type="Script" path="res://Scenes/multi_text.gd" id="1_h0bh1"]
[ext_resource type="FontFile" uid="uid://blcvqf1n1utnc" path="res://Assets/Fonts/times new roman.ttf" id="2_6simr"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h0bh1")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -352.0
offset_top = -17.5
offset_right = 352.0
offset_bottom = 17.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 200

[node name="Label" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_6simr")
theme_override_font_sizes/font_size = 25
text = "Multiplier"

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="LineEdit" type="LineEdit" parent="HBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
alignment = 1

[connection signal="focus_entered" from="HBoxContainer/LineEdit" to="." method="_on_line_edit_focus_entered"]
[connection signal="text_changed" from="HBoxContainer/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_submitted" from="HBoxContainer/LineEdit" to="." method="_on_line_edit_text_submitted"]
